<?xml version="1.0"?>
<package format="2">
  <name>realtime_detection</name>
  <version>0.0.0</version>
  <description>The realtime_detection package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="2018302141345@whu.edu.cn">aidlux</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Apache License 2.0</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="2018302141345@whu.edu.cn">Yipeng Zhao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
